--- a/BuiMuiGaim/Views/Cart/Index.cshtml
+++ b/BuiMuiGaim/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Product>
+﻿@model List<Product>
 @using BuiMuiGaim_Utility
 
 @if (Model.Count() > 0)
@@ -47,40 +47,41 @@
                             @{ 
                                 var orderTotal = 0.0;
                             }
-                            @foreach (var product in Model)
+                            @for (int i = 0; i < Model.Count(); i++)
                             {
-                            <div class="row h-100">
-                                <div class="col-4 col-md-2 text-center py-2">
-                                    <img src="@WC.ImagePath@product.Image" class="rounded" width="100%" />
-                                </div>
-
-                                    <div class="col-8 col-lg-3">
-                                        <h5>@product.Name</h5>
-                                        <div style="font-size:11px;">@product.ShortDesc</div>
+                                <input hidden asp-for="@Model[i].Id" />
+                                <div class="row h-100">
+                                    <div class="col-4 col-md-2 text-center py-2">
+                                        <img src="@WC.ImagePath@Model[i].Image" class="rounded" width="100%" />
                                     </div>
 
+                                        <div class="col-8 col-lg-3">
+                                            <h5>@Model[i].Name</h5>
+                                            <div style="font-size:11px;">@Model[i].ShortDesc</div>
+                                        </div>
 
-                                <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
-                                    <span style="font-size:17px;"> $@product.Price</span>
-                                </div>
 
-
-                                    <div class="col-4 col-lg-2 pt-lg-4" style="font-size:11px;">
-                                        <input type="text" asp-for="@product.TempAmount" class="form-control" />
-                                    </div>
                                     <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
-                                        <span style="font-size:17px;"> $@(product.Price * product.TempAmount)</span>
+                                        <span style="font-size:17px;"> $@Model[i].Price</span>
                                     </div>
+
+
+                                        <div class="col-4 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                            <input type="text" asp-for="@Model[i].TempAmount" class="form-control" />
+                                        </div>
+                                        <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                            <span style="font-size:17px;"> $@(Model[i].Price * Model[i].TempAmount)</span>
+                                        </div>
                             
 
-                                <div class="col-2 col-lg-1 p-0 pt-lg-4 text-center">
-                                    <a asp-action="Remove" asp-route-id="@product.Id" class="btn btn-outline-danger">
-                                        <i class="fas fa-trash"></i>
-                                    </a>
+                                    <div class="col-2 col-lg-1 p-0 pt-lg-4 text-center">
+                                        <a asp-action="Remove" asp-route-id="@Model[i].Id" class="btn btn-outline-danger">
+                                            <i class="fas fa-trash"></i>
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
-                                orderTotal += product.Price * product.TempAmount;
-                              <hr />
+                                    orderTotal += Model[i].Price * Model[i].TempAmount;
+                                  <hr />
                             }
 
                             <div class="row">
@@ -91,7 +92,12 @@
                         </div>
                         <div class="card-footer">
                             <div class="row">
-                                <div class="col-6 col-md-3 offset-md-9">
+                                <div class="col-6 col-md-3 offset-md-6">
+                                    <input type="submit" asp-action="UpdateCart" formmethod="post" name="Update" value="UpdateCart" 
+                                           class="btn btn-info form-control"/>
+
+                                </div>
+                                <div class="col-6 col-md-3">
                                     <button type="submit" class="btn btn-success form-control ">
                                         <span>Continue</span>
                                     </button>
