--- a/BuiMuiGaim/Views/Cart/Summary.cshtml
+++ b/BuiMuiGaim/Views/Cart/Summary.cshtml
@@ -28,7 +28,7 @@
                                         <label>Name</label>
                                     </div>
                                     <div class="col-9">
-                                        <input asp-for="ApplicationUser.FullName"type="text" class="form-control" />
+                                        <input asp-for="ApplicationUser.FullName"type="text" required class="form-control" />
                                         <span asp-validation-for="ApplicationUser.FullName" class="text-danger"></span>
                                     </div>
                                 </div>
@@ -37,7 +37,7 @@
                                         <label>Phone</label>
                                     </div>
                                     <div class="col-9">
-                                        <input asp-for="ApplicationUser.PhoneNumber" type="text" class="form-control" />
+                                        <input asp-for="ApplicationUser.PhoneNumber" required type="text" class="form-control" />
                                         <span asp-validation-for="ApplicationUser.PhoneNumber" class="text-danger"></span>
                                     </div>
                                 </div>
@@ -46,7 +46,7 @@
                                         <label>Email</label>
                                     </div>
                                     <div class="col-9">
-                                        <input asp-for="ApplicationUser.Email" type="text" class="form-control" />
+                                        <input asp-for="ApplicationUser.Email" required type="text" class="form-control" />
                                         <span asp-validation-for="ApplicationUser.Email" class="text-danger"></span>
                                     </div>
                                 </div>
@@ -57,6 +57,7 @@
                                         <span class="text-info">Summary:</span>
                                     </h4>
                                     <ul class="list-group mb-3">
+                                        @{ var totalSum = 0; }
                                         @for (int i = 0; i < Model.ProductList.Count; i++)
                                         {
                                             <input type="hidden" asp-for="@Model.ProductList[i].Name" />
@@ -64,10 +65,17 @@
                                             <li class="list-group-item d-flex justify-content-between">
                                                 <div>
                                                     <h6 class="my-0">@Model.ProductList[i].Name</h6>
-                                                    <small class="text-muted">Price: $ @Model.ProductList[i].Price</small>
+                                                    <small class="text-muted"> Price: $@Model.ProductList[i].Price</small>
+                                                    <small class="text-muted"> Amout: @Model.ProductList[i].TempAmount</small>
                                                 </div>
+                                                <span class="text-muted">$@(Model.ProductList[i].Price * Model.ProductList[i].TempAmount)</span>
                                             </li>
+                                            totalSum += Model.ProductList[i].Price * Model.ProductList[i].TempAmount;
                                         }
+                                        <li class="list-group-item d-flex justify-content-between bg-light">
+                                            <small class="text-info">Total amount:</small>
+                                            <strong class="text-info">$@totalSum</strong>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -77,7 +85,15 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-12 col-md-5 offset-md-7">
-                            <button type="submit" class="btn btn-primary form-control">Submit Inquiry</button>
+                            @if(User.IsInRole(BuiMuiGaim_Utility.WC.AdminRole))
+                            {
+                                 <button type="submit" class="btn btn-primary form-control" id="submit-button">Submit order</button>
+                            }
+                            else
+                            {
+                                <button type="submit" class="btn btn-primary form-control">Submit Inquiry</button>
+                            }
+                            
                         </div>
                     </div>
                 </div>
