--- a/BuiMuiGaim/Views/Cart/Index.cshtml
+++ b/BuiMuiGaim/Views/Cart/Index.cshtml
@@ -15,7 +15,8 @@
                                 Shopping Cart
                             </div>
                             <div class="col-6 text-right">
-                                <a asp-action="Index" asp-controller="Home" btn btn-outline-info btn-sm">Continue Shopping</a>
+                                <a asp-action="Clear" class="btn btn-outline-warning btn-sm">Clear Cart</a>
+                                <a asp-action="Index" asp-controller="Home" class="btn btn-outline-info btn-sm">Continue Shopping</a>
                             </div>
                         </div>
                         <div class="card-body">
