--- a/BuiMuiGaim/Views/Cart/Summary.cshtml
+++ b/BuiMuiGaim/Views/Cart/Summary.cshtml
@@ -80,14 +80,12 @@
                                         </li>
                                     </ul>
                                 </div>
-                                @if(User.IsInRole(BuiMuiGaim_Utility.WC.AdminRole))
+                                @if (User.IsInRole(BuiMuiGaim_Utility.WC.AdminRole))
                                 {
                                     <div class="col-12">
-                                        <div class="wrapper">
-                                            <div class="checkout container">
-                                                <div id="dropin-container"></div>
-                                                <input id="nonce" name="payment_method_nonce" type="hidden" />
-                                            </div>
+                                        <div class="container">
+                                            <div id="dropin-container"></div>
+                                            <input id="nonce" name="payment_method_nonce" type="hidden" />
                                         </div>
                                     </div>
                                 }
@@ -100,7 +98,7 @@
                         <div class="col-12 col-md-5 offset-md-7">
                             @if (User.IsInRole(BuiMuiGaim_Utility.WC.AdminRole))
                             {
-                                <button type="submit" class="btn btn-primary form-control" id="submit-button">Submit order</button>
+                                <button type="submit" class="btn btn-primary form-control" id="submit-button">Submit Order</button>
                             }
                             else
                             {
@@ -120,24 +118,21 @@
     <partial name="_ValidationScriptsPartial" />
     <script src="https://js.braintreegateway.com/web/dropin/1.32.1/js/dropin.min.js"></script>
     <script>
-        var form = document.querySelector('#payment-from');
-        var clien_token = "@ViewBag.ClientToken";
-
+        var client_token = "@ViewBag.ClientToken";
+        var form = document.querySelector('#payment-form');
         braintree.dropin.create({
-            authorization: clien_token,
-            container: '#dropin-container'
-        }, function (createErr, instance) {
-            form.addEventListener('submit', function () {
-                event.preventDefault();
-
-                //Add nonce to the form
-
-                instance.requestPaymentMethod(function (err, payload) {
-                    //submit payload nonce to server
-                    document.querySelector('#nonce').value = payload.nonce;
-                    from.submint();
-                });
-            });
+            authorization: client_token,
+              container: '#dropin-container'
+            }, function (createErr, instance) {
+                    form.addEventListener('submit', function () {
+                        event.preventDefault();
+                        //Add the nonce to the form and submit
+                                instance.requestPaymentMethod(function (err, payload) {
+                                    // Submit payload.nonce to your server
+                                    document.querySelector('#nonce').value = payload.nonce;
+                                    form.submit();
+                                });
+                            });
         });
 
     </script>
