--- a/BuiMuiGaim/Views/Cart/Index.cshtml
+++ b/BuiMuiGaim/Views/Cart/Index.cshtml
@@ -24,28 +24,28 @@
                                 <div class="row" style="color:#821f3d">
                                     <div class="col-lg-2">
                                     </div>
-                                        <div class="col-12 col-lg-3">
-                                            Product Details
-                                        </div>
+                                    <div class="col-12 col-lg-3">
+                                        Product Details
+                                    </div>
 
                                     <div class="col-6 col-lg-2">
                                         Price
                                     </div>
 
-                                        <div class="col-6 col-lg-2">
-                                            Amount
-                                        </div>
-                                        <div class="col-6 col-lg-2">
-                                            Total Price
-                                        </div>
-                                    
+                                    <div class="col-6 col-lg-2">
+                                        Amount
+                                    </div>
+                                    <div class="col-6 col-lg-2">
+                                        Total Price
+                                    </div>
+
                                     <div class="col-6 col-sm-4 col-lg-1">
                                     </div>
                                 </div>
                             </div>
 
                             <hr />
-                            @{ 
+                            @{
                                 var orderTotal = 0.0;
                             }
                             @for (int i = 0; i < Model.Count(); i++)
@@ -56,10 +56,10 @@
                                         <img src="@WC.ImagePath@Model[i].Image" class="rounded" width="100%" />
                                     </div>
 
-                                        <div class="col-8 col-lg-3">
-                                            <h5>@Model[i].Name</h5>
-                                            <div style="font-size:11px;">@Model[i].ShortDesc</div>
-                                        </div>
+                                    <div class="col-8 col-lg-3">
+                                        <h5>@Model[i].Name</h5>
+                                        <div style="font-size:11px;">@Model[i].ShortDesc</div>
+                                    </div>
 
 
                                     <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
@@ -67,13 +67,15 @@
                                     </div>
 
 
-                                        <div class="col-4 col-lg-2 pt-lg-4" style="font-size:11px;">
-                                            <input type="text" asp-for="@Model[i].TempAmount" class="form-control" />
-                                        </div>
-                                        <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
-                                            <span style="font-size:17px;"> @string.Format("{0:c}", Model[i].Price * Model[i].TempAmount)</span>
-                                        </div>
-                            
+                                    <div class="col-4 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                        <input type="text" asp-for="@Model[i].TempAmount" class="form-control" />
+                                        <span asp-validation-for="@Model[i].TempAmount" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-3 col-lg-2 pt-lg-4" style="font-size:11px;">
+                                        <span style="font-size:17px;"> @string.Format("{0:c}", Model[i].Price * Model[i].TempAmount)</span>
+
+                                    </div>
+
 
                                     <div class="col-2 col-lg-1 p-0 pt-lg-4 text-center">
                                         <a asp-action="Remove" asp-route-id="@Model[i].Id" class="btn btn-outline-danger">
@@ -81,21 +83,21 @@
                                         </a>
                                     </div>
                                 </div>
-                                    orderTotal += Model[i].Price * Model[i].TempAmount;
-                                  <hr />
+                                orderTotal += Model[i].Price * Model[i].TempAmount;
+                                <hr />
                             }
 
                             <div class="row">
                                 <div class="col-12 text-right pr-4" style="color:#821f3d">
                                     OrderTotal : @string.Format("{0:c}", orderTotal);
                                 </div>
-                            </div>                             
+                            </div>
                         </div>
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col-6 col-md-3 offset-md-6">
-                                    <input type="submit" asp-action="UpdateCart" formmethod="post" name="Update" value="UpdateCart" 
-                                           class="btn btn-info form-control"/>
+                                    <input type="submit" asp-action="UpdateCart" formmethod="post" name="Update" value="UpdateCart"
+                                           class="btn btn-info form-control" />
 
                                 </div>
                                 <div class="col-6 col-md-3">
@@ -114,4 +116,8 @@
 else
 {
     <p>Please add items to cart.</p>
+}
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
 }
